Add comprehensive tests for chat API functionality
- Implement tests for creating, listing, and managing conversations (direct and group).
- Add tests for sending, receiving, and managing messages, including editing and deleting.
- Include tests for reactions, read receipts, and mentions in messages.
- Ensure task chat shortcuts and user mentions are properly validated.
- Cover WebSocket events for conversation updates and member management.